Revision history for Perl extension Encode::ZapCP1252

0.34
      - Added link to Encode::FixLatin. Suggested by Jonas Smedegaard.
      - Removed Pod tests.
      - Refactored and greatly simplified, in part to fix issues on Perl 5.31.
        Thanks to Karl Williamson for the continuing improvement of Unicode
        support in Perl and for the fix to this module.

0.33  2011-11-23T05:19:36Z
      - Require Test::Pod 1.41 to support `L<text|url>` syntax in the Pod.
      - Support for decoded strings is supported only in 5.8.8 and higher due
        to bugs in the handling of UTF-8 characters in regular expressions
        prior to that release.

0.32  2010-06-16T22:45:06
      - Fixed bug where `zap_cp1252` was failing to return a value when called
        in a list or scalar context.

0.31  2010-06-14T03:09:06
      - Fixed test failures on Perls less than 5.10.

0.30  2010-06-12T18:05:38
      - The conversion functions now ignore `undef` arguments and just return
        without doing anything.
      - Strings are no longer modified in-place unless the conversion
        subroutines are called in a void context.
      - The conversion functions may optionally be called with no argument
        when run in Perl 5.10 or higher, in which case they will instead act
        on `$_`.

0.20  2010-06-12T00:39:35
      - Added `local` to examples of changing the mapping tables.
      - When the Encode module is installed, zapping and fixing CP1252
        gremlins now works in decoded strings, too.
      - For convenience, the functions now return the strings they've
        modified.
      - Shipping with a traditional `Makefile.PL` rather than one that
        passes through to Module::Build.
      - Moved repository to [GitHub](https://github.com/theory/encode-zapcp1252).

0.12  2008-06-23T17:48:04
      - Fixed pasto in the "Support" section of the docs.
      - Fixed a typo in the "Synopsis" section of the docs, thanks to David
        Beaudet.