@@ -6,6 +6,7 @@ Revision history for Perl extension Encode::ZapCP1252
       - Refactored and greatly simplified, in part to fix issues on Perl 5.31.
         Thanks to Karl Williamson for the continuing improvement of Unicode
         support in Perl and for the fix to this module.
+      - Valid UTF-8 strings will no longer have any bytes replaced.
 
 0.33  2011-11-23T05:19:36Z
       - Require Test::Pod 1.41 to support `L<text|url>` syntax in the Pod.
